--- a/app/share/components/main/taskSettings/taskSettingsStyle.css
+++ b/app/share/components/main/taskSettings/taskSettingsStyle.css
@@ -158,7 +158,7 @@
 
 .add-subTask-form {
   position: relative;
-  padding: 0 48px 10px 48px;
+  padding: 0 65px 10px 48px;
 }
 
 .sprite-add-small {
@@ -180,7 +180,7 @@
 
 .note-form {
   position: relative;
-  padding: 0 48px;
+  padding: 0 65px 0 48px;
 }
 
 .sprite-note {
@@ -194,6 +194,10 @@
   top: 5px;
   right: 45px;
   pointer-events: none;
+}
+
+.note-form input[type="text"] {
+  text-overflow: ellipsis;
 }
 
 .note-form input[type="submit"]:hover + .sprite-note {
